# chem4all-prototype

./: .gitignore  README.md  config.py  logging_setup.py  main.py  pyproject.toml  setup.sh
.github/workflows/: release-macos.yml  release-on-version-bump.yml  tests.yml
docs/superpowers/: 2026-07-05-macos-app-packaging-handoff.md
docs/superpowers/plans/: 2026-06-30-chem4all.md  2026-07-03-image-description.md  2026-07-03-prediction-type-selection.md  2026-07-04-macos-app-packaging.md  2026-07-09-diagnostic-logging.md  2026-07-09-editable-predicted-value.md  2026-07-09-pipeline-diagnostic-logging.md  2026-07-10-decorative-image-prediction-type.md  2026-07-10-multi-prediction-selection.md  2026-07-10-row-hover-highlight.md  2026-07-11-review-prediction-pills.md  2026-07-11-toggle-all-predictions.md  2026-07-12-drag-and-drop-file-open.md  (+1 more)
gui/: app.py  extractor_worker.py  file_picker.py  model_manager.py  review_window.py  selection_window.py  settings_dialog.py  splash.py  widgets.py  worker.py
models/: image_record.py
packaging/: build_dmg.sh  chem4all.spec
packaging/hooks/: rthook_cairo.py
pipeline/: describer.py  extractor.py  namer.py  recognizer.py  reviewer.py  writer.py
tests/: conftest.py  test_config.py  test_describer.py  test_extractor.py  test_file_picker.py  test_image_record.py  test_logging_setup.py  test_main.py  test_model_manager.py  test_namer.py  test_pipeline_integration.py  test_recognizer.py  test_review_window.py  test_reviewer.py  test_selection_window.py  test_widgets.py  test_worker.py  test_writer.py
(+14 files in other folders)
