[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chem4all"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-pptx",
    "python-docx",
    "Pillow",
    "PyQt6",
]

[project.scripts]
chem4all = "main:main"

[tool.setuptools]
packages = ["models", "pipeline", "gui", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
