[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chem4all"
version = "0.1.0"
license = "GPL-3.0-only"
requires-python = ">=3.9,<3.13"
dependencies = [
    "python-pptx",
    "python-docx",
    "Pillow",
    "PyQt6",
    "DECIMER",
    "cairosvg",
    "requests",
]

[project.scripts]
chem4all = "main:main"

[tool.setuptools]
packages = ["models", "pipeline", "gui", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
